# Async-Chat-Reborn

Client/: CMakeLists.txt
Client/include/: Client.hpp  Session.hpp
Client/src/: main.cpp
Client/src/core/: Client.cpp  Session.cpp
Server/: CMakeLists.txt
Server/include/: Active_clients.hpp  Client_data.hpp  Server.hpp  Session.hpp
Server/src/: main.cpp
Server/src/core/: Active_clients.cpp  Client_data.cpp  Server.cpp  Session.cpp
